k8s/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: workshop
spec:
  ports:
    - name: backend
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    role: backend


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: workshop
  labels:
    role: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: backend
  template:
    metadata:
      labels:
        role: backend
    spec:
      serviceAccountName: healthcare-sa
      containers:
        - name: backend
          image: localhost:32000/backend
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
