k8s/mongo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: workshop
  name: mongo-svc
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo-svc
      protocol: TCP
      port: 27017
      targetPort: 27017


---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: workshop
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      serviceAccountName: healthcare-sa
      containers:
        - name: mongo
          image: 851725361780.dkr.ecr.us-east-1.amazonaws.com/mongo
          command:
            - "numactl"
            - "--interleave=all"
            - "mongod"
            - "--wiredTigerCacheSizeGB"
            - "0.1"
            - "--bind_ip"
            - "0.0.0.0"
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
